# sop-experiments

./: .gitignore  CHANGELOG.md  LICENSE  README.md  sop-experiments.cabal
.github/workflows/: ci.yml
src/: BetterUnpickleErrors.hs  HxtPickleInvertible.hs  InvertibleSOP.hs  PickleSOP.hs  PickleSopExample.hs  SopExperiments.hs  SopParser.hs
