cabal-version:       2.4
name:                sop-experiments
version:             0.0.0.0
synopsis:            Experiments with generics-sop
description:         Experiments with generics-sop
homepage:            https://github.com/anka-213/sop-experiments
bug-reports:         https://github.com/anka-213/sop-experiments/issues
license:             MIT
license-file:        LICENSE
author:              Andreas Källberg
maintainer:          Andreas Källberg <anka.213@gmail.com>
copyright:           2020 Andreas Källberg
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/anka-213/sop-experiments.git

common common-options
  build-depends:       base ^>= 4.13.0.0
  build-depends:       generics-sop
                     , QuickCheck
                     , hxt
                     -- Used by Text.XML.HXT.Arrow.Pickle.Xml.Invertible
                    --  , invertible-sop
                     , invertible
                     , mtl
                     , hxt-charproperties
  
  extensions:          TypeApplications
                     , EmptyCase
                     , DataKinds
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     SopExperiments
                     , SopParser
                     , PickleSOP
                     , HxtPickleInvertible
                    --  , Text.XML.HXT.Arrow.Pickle.Xml.Invertible

test-suite sop-experiments-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       sop-experiments
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark sop-experiments-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , sop-experiments
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
